--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
 
 html {
   background-color: rgb(4, 83, 88);
+  width: 100%;
 }
 
 .App {
@@ -9,4 +10,14 @@ html {
   font-family: 'Ubuntu', sans-serif;
   font-weight: 500;
   color: white;
+}
+
+main {
+  padding: 80px;
+}
+
+@media only screen and (max-width: 430px) {
+  main {
+    padding: 80px 10px 80px 10px;
+  }
 }
