--- a/src/Components/Video.css
+++ b/src/Components/Video.css
@@ -1,6 +1,11 @@
 .Video {
     width: 100%;
 }
+.Video hr {
+    background-color: #ff6c11;
+    height: 10px;
+    border-radius: 7px;
+}
 
 .ChannelDetails {
     display: flex;
