--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500&display=swap');
 
 html {
-  background-color: rgb(4, 83, 88);
+  /* background-color: rgb(4, 83, 88); */
+  background-color: #0D0221;
   width: 100%;
 }
 
@@ -9,7 +10,8 @@ html {
   text-align: center;
   font-family: 'Ubuntu', sans-serif;
   font-weight: 500;
-  color: white;
+  /* color: white; */
+  color: #2ED2E6;
 }
 
 main {
