--- a/src/Components/NavBar.css
+++ b/src/Components/NavBar.css
@@ -1,14 +1,22 @@
-.navBar {
+.NavBar {
    display: flex;
    align-items: center;
    justify-content: space-evenly;
-   background-color: crimson;
+   /* background-color: crimson; */
+   /* color: #0D0221; */
+   background-image: linear-gradient(#241734 20%, #fd1d53);
    height: 150px;
 }
 
-.links {
-   font-size: x-large;
+.NavBar .logo {
+   color: #FD1D53;
+}
+
+.NavBar .links {
+   /* font-size: x-large; */
+   font: italic 2.2em impact;
    font-weight: bold;
    text-decoration: none;
-   color: white;
+   /* color: white; */
+   color: #ff6c11;
 }
