refactored axios calls without chianing

--- a/src/Components/NavBar.css
+++ b/src/Components/NavBar.css
@@ -5,6 +5,7 @@
    /* background-color: crimson; */
    /* color: #0D0221; */
    background-image: linear-gradient(#241734 20%, #fd1d53);
+   /* background-image: linear-gradient(#241734 20%, #F706CF);  TRY THIS COLOR OUT*/
    height: 150px;
 }
 
