--- a/src/App.css
+++ b/src/App.css
@@ -23,3 +23,14 @@ main {
     padding: 80px 10px 80px 10px;
   }
 }
+
+input {
+  background: none;
+	color: inherit;
+	border: none;
+	padding: 0;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
+  border: 1px solid red;
+}
